manifests-demo-app/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: workshop-web
  labels:
    app: workshop-web
spec:
  containers:
    - name: nginx
      image: nginxinc/nginx-unprivileged
      ports:
        - containerPort: 8080
