manifests-demo-app/06-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-web
  labels:
    app: workshop-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-web
  template:
    metadata:
      labels:
        app: workshop-web
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: web-content
            mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
      volumes:
        - name: web-content
          configMap:
            name: workshop-web
