manifests-demo-app/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-web
spec:
  selector:
    app: workshop-web
  ports:
    - port: 80
      targetPort: 8080
