manifests-demo-app/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-web
spec:
  to:
    kind: Service
    name: workshop-web
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
